tests/fixtures/invalid/str_floordiv_int.py
# Cannot floor divide Str and Int
x: str = "hello" // 1
